--- a/index.qmd
+++ b/index.qmd
@@ -10,20 +10,18 @@ format:
 <div class="frame">
   <aside class="rail" aria-label="Primary">
     <div class="brand">
-      <a href="cv-html.html" class="name" data-preview="images/about.jpg">erik hedlin</a>
+      <a href="index.html" class="name" data-preview="images/about.jpg">erik hedlin</a>
       <!-- <div class="role">Data Scientist</div> -->
+      <div style="margin-top: 8px;">
+        <a href="cv-html.html" style="font-size: 12px; color: #666; text-decoration: none;">cv</a>
+      </div>
     </div>
 
     <nav class="menu" aria-label="Navigation">
       <div class="menu-section">
-        <!-- <h3 class="menu-heading">Information</h3> -->
+        <!-- <h3 class="menu-heading">Blog</h3> -->
         <ul>
-          <li><a href="index.html" style="font-weight: 600;">home</a></li>
-          <li><a href="cv-html.html">cv</a></li>
-          <!-- <li><a href="posts/" data-preview="images/landscape.png">item 1</a></li>
-          <li><a href="about.html" data-preview="images/landscape2.png">item 2</a></li>
-          <li><a href="archive.html" data-preview="images/archive.jpg">item 3</a></li>
-          <li><a href="photography.html" data-preview="images/photography.jpg">item 4</a></li> -->
+          <!-- <li><a href="posts/" data-preview="images/landscape.png">posts</a></li> -->
         </ul>
       </div>
       
