--- a/index.qmd
+++ b/index.qmd
@@ -21,7 +21,7 @@ format:
       <div class="menu-section">
         <!-- <h3 class="menu-heading">Blog</h3> -->
         <ul>
-          <!-- <li><a href="posts/" data-preview="images/landscape.png">posts</a></li> -->
+          <li><a href="posts/" data-preview="images/landscape.png">posts</a></li>
         </ul>
       </div>
       
